--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <script src="javascript.js" defer></script>
   </head>
 
-  <body></body>
+  <body>
+    <div id="sketch-container"></div>
+  </body>
 </html>
