Add opacity button to toggle progressive darkening

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <button id="size-button">Size</button>
+    <button id="opacity-button">Opacity</button>
     <div id="sketch-container"></div>
   </body>
 </html>
