Add Colorful button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <button id="size-button">Size</button>
     <button id="opacity-button">Opacity</button>
+    <button id="colorful-button">Colorful</button>
     <div id="sketch-container"></div>
   </body>
 </html>
