Add divs style.csscase and style.csscase-buttons

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
   </head>
 
   <body>
-    <button id="size-button">Size</button>
-    <button id="opacity-button">Opacity</button>
-    <button id="colorful-button">Colorful</button>
-    <div id="sketch-container"></div>
+    <div id="case">
+      <div id="sketch-container"></div>
+      <div id="case-buttons">
+        <button id="size-button">Size</button>
+        <button id="opacity-button">Opacity</button>
+        <button id="colorful-button">Colorful</button>
+      </div>
+    </div>
   </body>
 </html>
