Add div style.csscase-text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <div id="case">
+      <div id="case-text">Etch-a-Sketch</div>
       <div id="sketch-container"></div>
       <div id="case-buttons">
         <button id="size-button">Size</button>
