Add #case-bottom div and #left-knob, #right-knob divs

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <div id="case">
       <div id="case-text">Etch-a-Sketch</div>
       <div id="sketch-container"></div>
-      <div id="case-buttons">
-        <button id="size-button">Size</button>
-        <button id="opacity-button">Opacity</button>
-        <button id="colorful-button">Colorful</button>
+      <div id="case-bottom">
+        <div id="left-knob"></div>
+        <div id="case-buttons">
+          <button id="size-button">Size</button>
+          <button id="opacity-button">Opacity</button>
+          <button id="colorful-button">Colorful</button>
+        </div>
+        <div id="right-knob"></div>
       </div>
     </div>
   </body>
