Add footer div with github logo

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
         <div id="right-knob"></div>
       </div>
     </div>
+    <div id="footer">
+      <img src="./images/github-mark.png" /> Created by Raul Acosta
+    </div>
   </body>
 </html>
