--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
   </head>
 
   <body>
-    <div id="case">
-      <div id="case-text">Etch-a-Sketch</div>
-      <div id="sketch-container"></div>
-      <div id="case-bottom">
-        <div id="left-knob"></div>
-        <div id="case-buttons">
-          <button id="size-button">Size</button>
-          <button id="opacity-button">Opacity</button>
-          <button id="colorful-button">Colorful</button>
+    <div id="container">
+      <div id="case">
+        <div id="case-text">Etch-a-Sketch</div>
+        <div id="sketch-container"></div>
+        <div id="case-bottom">
+          <div id="left-knob"></div>
+          <div id="case-buttons">
+            <button id="size-button">Size</button>
+            <button id="opacity-button">Opacity</button>
+            <button id="colorful-button">Colorful</button>
+          </div>
+          <div id="right-knob"></div>
         </div>
-        <div id="right-knob"></div>
       </div>
     </div>
     <div id="footer">
-      <img src="./images/github-mark.png" /> Created by Raul Acosta
+      <a id="github-link" href="https://github.com/racodess">
+        <img src="./images/github-mark.png" /> Created by Raul Acosta
+      </a>
     </div>
   </body>
 </html>
